show languages names in that language, remove now useless translations

--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -13,13 +13,13 @@
           <div class="col-xs-12 col-sm-10">
             <div class="select">
               <select ng-model="$storage.language" ng-change="changeLanguage()">
-                <option value="en" translate="ENGLISH">English</option>
-                <option value="es" translate="SPANISH">Spanish</option>
-                <option value="de" translate="GERMAN">German</option>
-                <option value="fr" translate="FRENCH">French</option>
-                <option value="ja" translate="JAPANESE">Japanese</option>
-                <option value="pt-br" translate="PORTUGUESE">Portuguese</option>
-                <option value="it" translate="ITALIAN">Italian</option>
+                <option value="en">English</option>
+                <option value="es">Español</option>
+                <option value="de">Deutsch</option>
+                <option value="fr">Français</option>
+                <option value="it">Italiano</option>
+                <option value="pt-br">Português</option>
+                <option value="ja">日本語</option>
               </select>
             </div>
             <hr class="hr--faded">
