--- a/app/shared/modals/heatmap.modal.html
+++ b/app/shared/modals/heatmap.modal.html
@@ -1,5 +1,7 @@
 <div class="modal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <img class="img-responsive" ng-src="{{currentMap.heatmapImage}}" alt="Heatmap">
+  <div class="modal-wrapper">
+    <div class="modal-dialog">
+      <img class="img-responsive" ng-src="{{currentMap.heatmapImage}}" alt="Heatmap">
+    </div>
   </div>
 </div>
