--- a/app/shared/modals/mapinfo.modal.html
+++ b/app/shared/modals/mapinfo.modal.html
@@ -57,7 +57,7 @@
               </div>
               <div class="row top-weapons--map__row" ng-repeat="weapon in weapons">
                 <div class="col-xs-6 col-sm-4">
-                  <img class="weapon-type-icon img-responsive" ng-src="{{'assets/img/weapon-icons/' + weapon.weapon_type.toLowerCase().replace(' ','-') + '.svg'}}" alt="{{weapon.weapon_type}}">
+                  <img class="weapon-type-icon img-responsive" ng-src="{{'assets/img/weapon-icons/' + weapon.weapon_type + '.svg'}}" alt="{{weapon.weapon_type}}">
                 </div>
                 <div class="col-xs-3 col-sm-4 stat">
                   <span ng-bind="weapon.killPercentage | number:2"></span>%
