--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -21,6 +21,7 @@
                   <option value="it">Italiano</option>
                   <option value="pt-br">Português</option>
                   <option value="ja">日本語</option>
+                  <option value="tr">Türkçe</option>
                 </select>
               </div>
               <hr class="hr--faded">
