--- a/app/shared/modals/faq.modal.html
+++ b/app/shared/modals/faq.modal.html
@@ -11,11 +11,11 @@
         <div class="modal-text">
           <div class="faq-modal__container">
             <p class="faq-modal__question">Is there a Destiny Trials Report app?</p>
-            <p class="faq-modal__answer">Not for the time being, but you can achieve a native app feeling by <a href="http://www.howtogeek.com/196087/how-to-add-websites-to-the-home-screen-on-any-smartphone-or-tablet/" target="_blank">adding this webpage to your homescreen</a>.</p>
+            <p class="faq-modal__answer">Coming soon to iOS and Android! For the time being, you can achieve a native app feeling by <a href="http://www.howtogeek.com/196087/how-to-add-websites-to-the-home-screen-on-any-smartphone-or-tablet/" target="_blank">adding this webpage to your homescreen</a>.</p>
           </div>
           <div class="faq-modal__container">
             <p class="faq-modal__question">Why did my flawless count not update?</p>
-            <p class="faq-modal__answer">Flawless count is based on lighthouse visits per character per week, this is the only way we can do it.</p>
+            <p class="faq-modal__answer">Flawless count is based on visits to the Lighthouse per character per week. Only one visit per character, per week is counted.</p>
           </div>
           <div class="faq-modal__container">
             <p class="faq-modal__question">Why don't you support other game modes like Skirmish, for example?</p>
@@ -23,7 +23,7 @@
           </div>
           <div class="faq-modal__container">
             <p class="faq-modal__question">What data do you store on your servers?</p>
-            <p class="faq-modal__answer">We store only Trials data, this includes individual players, the matches they played and weapons they have killed with</p>
+            <p class="faq-modal__answer">We store Trials of Osiris data, including individual players, the matches they played, and the weapons they used.</p>
           </div>
           <div class="faq-modal__container">
             <p class="faq-modal__question">This is so awesome that I'm throwing money at my screen. Is there something wrong?</p>
