fix routing and add controller

--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,7 @@
     <script src="components/matches/matches.directive.js"></script>
     <script src="components/stats/stats.factory.js"></script>
     <script src="components/stats/stats.directive.js"></script>
+    <script src="components/infographic/infographic.controller.js"></script>
     <script src="shared/factories/customSwipe.factory.js"></script>
     <script src="shared/factories/guardiangg.factory.js"></script>
     <script src="shared/directives/adsense.directive.js"></script>
