smaller manifests and moved maps into its own controller

--- a/app/index.html
+++ b/app/index.html
@@ -99,10 +99,10 @@
     <script src="components/controls/controls.controller.js"></script>
     <script src="components/home/home.factory.js"></script>
     <script src="components/home/home.controller.js"></script>
+    <script src="components/maps/maps.controller.js"></script>
     <script src="components/player/player.controller.js"></script>
     <script src="components/player/player.factory.js"></script>
     <script src="components/inventory/inventory.service.js"></script>
-    <script src="components/inventory/inventory.factory.js"></script>
     <script src="components/inventory/inventory.directive.js"></script>
     <script src="components/matches/matches.factory.js"></script>
     <script src="components/matches/matches.directive.js"></script>
