--- a/app/shared/popovers/currentWeek.popover.html
+++ b/app/shared/popovers/currentWeek.popover.html
@@ -1,18 +1,17 @@
-<div class="popover" tabindex="-1" ng-show="player.currentWeek">
+<div class="popover" tabindex="-1" ng-show="player.currentWeek.matches > 0">
   <div class="arrow"></div>
   <div class="popover-content">
     <div class="stat__header" translate="THISWEEK"></div>
-    <div class="row row--small-gutter">
-      <div class="col-xs-5 stat">
-        <span ng-if="player.currentWeek.matches > 0" ng-bind="(player.currentWeek.percent | number:0) + '%'"></span>
-        <span ng-if="player.currentWeek.matches == 0">N/A</span>
+    <div class="row">
+      <div class="popover-col stat" ng-if="player.currentWeek.matches > 0">
+        <span ng-bind="(player.currentWeek.percent | number:0) + '%'"></span>
         <label translate="PERCENT"></label>
       </div>
-      <div class="col-xs-3 stat">
+      <div class="popover-col stat">
         <span ng-bind="player.currentWeek.wins | number:0"></span>
         <label translate="wins"></label>
       </div>
-      <div class="col-xs-4 stat">
+      <div class="popover-col stat">
         <span ng-bind="player.currentWeek.losses | number:0"></span>
         <label translate="losses"></label>
       </div>
