--- a/app/shared/popovers/streak.popover.html
+++ b/app/shared/popovers/streak.popover.html
@@ -2,18 +2,15 @@
   <div class="arrow"></div>
   <div class="popover-content">
     <div class="stat__header" translate="WINSTREAK"></div>
-    <div class="row row--small-gutter">
-      <div class="col-xs-6 stat">
+    <div class="row">
+      <div class="popover-col stat">
         <span ng-bind="(player.longestStreak.accountStreak | number:0) || 0"></span>
         <label translate="ACCOUNT"></label>
       </div>
-      <div class="col-xs-6 stat">
+      <div class="popover-col stat">
         <span ng-bind="(player.longestStreak.characterStreak | number:0) || 0"></span>
         <label translate="CHARACTER"></label>
       </div>
     </div>
   </div>
-  <!--<div class="popover-footer text-center">
-    Longest Win Streak
-  </div>-->
 </div>
