Popover columns refactoring

--- a/app/shared/popovers/gggElo.popover.html
+++ b/app/shared/popovers/gggElo.popover.html
@@ -1,7 +1,7 @@
 <div class="popover ggg-elo {{player.ggg.tier}}" tabindex="-1" ng-show="player.ggg">
   <div class="arrow"></div>
   <div class="popover-content">
-    <div class="row">
+    <div class="popover-row">
       <div class="popover-col stat">
         <span translate="GuardianGG.tiers.{{player.ggg.tier}}"></span>
         <label translate="TIER"></label>
