--- a/app/shared/popovers/lighthouse.popover.html
+++ b/app/shared/popovers/lighthouse.popover.html
@@ -2,7 +2,7 @@
   <div class="arrow"></div>
   <div class="popover-content">
     <div class="stat__header" translate="flawlessPopoverHeader"></div>
-    <div class="row">
+    <div class="popover-row">
       <div class="popover-col" ng-repeat="i in [3, 2, 1]" ng-init="year = player.lighthouse.years[i]">
         <div class="stat">
           <span class="success" ng-if="year">
