--- a/app/shared/popovers/currentWeek.popover.html
+++ b/app/shared/popovers/currentWeek.popover.html
@@ -2,7 +2,7 @@
   <div class="arrow"></div>
   <div class="popover-content">
     <div class="stat__header" translate="THISWEEK"></div>
-    <div class="row">
+    <div class="popover-row">
       <div class="popover-col stat" ng-if="player.currentWeek.matches > 0">
         <span ng-bind="(player.currentWeek.percent | number:0) + '%'"></span>
         <label translate="PERCENT"></label>
