--- a/app/shared/popovers/kd.popover.html
+++ b/app/shared/popovers/kd.popover.html
@@ -1,7 +1,7 @@
 <div class="popover" tabindex="-1" ng-show="player.year3.kd > 0 || player.year2.kd > 0">
   <div class="arrow"></div>
   <div class="popover-content">
-    <div class="row">
+    <div class="popover-row">
       <div class="popover-col stat" ng-if="player.currentWeek.kd > 0">
         <span ng-bind="player.currentWeek.kd | number:2"></span>
         <label translate="THISWEEK"></label>
