--- a/app/shared/popovers/streak.popover.html
+++ b/app/shared/popovers/streak.popover.html
@@ -2,7 +2,7 @@
   <div class="arrow"></div>
   <div class="popover-content">
     <div class="stat__header" translate="WINSTREAK"></div>
-    <div class="row">
+    <div class="popover-row">
       <div class="popover-col stat">
         <span ng-bind="(player.longestStreak.accountStreak | number:0) || 0"></span>
         <label translate="ACCOUNT"></label>
