--- a/app/shared/popovers/weaponstats.popover.html
+++ b/app/shared/popovers/weaponstats.popover.html
@@ -2,20 +2,20 @@
   <div class="arrow"></div>
   <div ng-if="topWeapons && topWeapons[weapon.definition.itemHash] != null">
     <div class="popover-content">
-      <div class="row">
-        <div class="col-xs-3 stat">
+      <div class="popover-row">
+        <div class="popover-col stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].kills | number:0"></span>
           <label translate="kills"></label>
         </div>
-        <div class="col-xs-3 stat">
+        <div class="popover-col stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].headshots | number:0"></span>
           <label translate="HEADSHOTS"></label>
         </div>
-        <div class="col-xs-3 stat">
+        <div class="popover-col stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].precision | number:0"></span>%
           <label translate="PRECISION"></label>
         </div>
-        <div class="col-xs-3 stat">
+        <div class="popover-col stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].win_percentage | number:0"></span>%
           <label translate="wins"></label>
         </div>
