fixes rare gamertag issue and john cena

--- a/app/shared/popovers/charity1.popover.html
+++ b/app/shared/popovers/charity1.popover.html
@@ -2,6 +2,6 @@
   <div class="arrow"></div>
   <div class="popover-content">
     <p ng-bind="hazard.description"></p>
-		<a href="http://www.globaldownsyndrome.org/" target="_blank"><img ng-src="{{hazard.icon}}" title="Global Down Syndrome Foundation"></a>
+		<a href="" target="_blank"><img ng-src="{{hazard.icon}}"></a>
   </div>
 </div>
