--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
     <script src="shared/services/util.js"></script>
     <script src="shared/services/locationChanger.js"></script>
     <script src="components/controls/controls.controller.js"></script>
-    <script src="components/controls/message.component.js"></script>
+    <script src="components/controls/message.directive.js"></script>
     <script src="components/home/home.factory.js"></script>
     <script src="components/home/home.controller.js"></script>
     <script src="components/maps/maps.controller.js"></script>
