--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,7 @@
     <script src="shared/directives/xpull.directive.js"></script>
     <script src="shared/directives/caroussel.directive.js"></script>
     <script src="shared/directives/accessiblePopover.directive.js"></script>
+    <script src="shared/directives/realtime.directive.js"></script>
     <script src="shared/filters/orderObjectBy.filter.js"></script>
     <script src="shared/filters/secondsToDateTime.filter.js"></script>
     <!-- endbuild -->
