--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
     <script src="app.config.js"></script>
     <script src="shared/services/api.js"></script>
     <script src="shared/services/bungie.js"></script>
+    <script src="shared/services/destiny.tracker.js"></script>
     <script src="shared/services/guardian.gg.js"></script>
     <script src="shared/services/util.js"></script>
     <script src="shared/services/locationChanger.js"></script>
